# Kvantbot

./: .gitignore
devel/lib/kvantbot_contest/: traffic_sign_detect.py  traffic_sign_detect_old.py
devel/lib/kvantbot_driver/: btn_module  buzzer_module  buzzer_module.py  line_sensors
devel/lib/kvantbot_line_movement/: line_sensors
devel/lib/kvantbot_pdd/: traffic_sign_detect_old.py
devel/lib/pkgconfig/: kvantbot_contest.pc  kvantbot_line_movement.pc  kvantbot_pdd.pc
devel/share/kvantbot_contest/cmake/: kvantbot_contestConfig.cmake
devel/share/kvantbot_line_movement/cmake/: kvantbot_line_movementConfig.cmake
devel/share/kvantbot_pdd/cmake/: kvantbot_pddConfig.cmake
src/kvantbot_base/: CMakeLists.txt  package.xml
src/kvantbot_base/launch/: base.launch
src/kvantbot_base/src/: kvantbot_base.cpp  kvantbot_hardware_interface.hpp
src/kvantbot_contest/: CMakeLists.txt  package.xml
src/kvantbot_contest/launch/: contest.launch
src/kvantbot_contest/src/: sign_detect.py  traffic_sign_detect.py
src/kvantbot_control/: CMakeLists.txt  package.xml
src/kvantbot_control/config/: controllers.yaml
src/kvantbot_control/launch/: control.launch  kvantbot_control.launch
src/kvantbot_description/: CMakeLists.txt  package.xml
src/kvantbot_description/launch/: bringup.launch  controller.launch  controller.yaml  display.launch  gazebo.launch  movement.launch
src/kvantbot_description/meshes/: ball_caster_1.stl  left_wheel_1.stl  lidar_1.stl  right_wheel_1.stl
src/kvantbot_description/rviz/: display_movement.rviz  kvantbot_model.rviz
src/kvantbot_description/urdf/: Robot.gazebo  Robot.trans  Robot.xacro  materials.xacro
src/kvantbot_driver/: CMakeLists.txt  package.xml
src/kvantbot_driver/launch/: cam.launch  drivers.launch  kvantbot_drivers.launch  kvantbot_pid.launch
src/kvantbot_driver/src/: button_module.cpp  button_module.hpp  buzzer_module.cpp  buzzer_module.hpp  buzzer_module_for_del.py  dc_motor_wiring_pi.hpp  dc_motors.cpp  encoder_wiring_pi.hpp  encoders.cpp  line_sensor.hpp  line_sensors.cpp
src/kvantbot_line_movement/: CMakeLists.txt
src/kvantbot_line_movement/src/: line_sensor.hpp  line_sensors.cpp
src/kvantbot_pdd/: CMakeLists.txt  package.xml
src/kvantbot_pdd/launch/: contest_r.launch
src/kvantbot_pdd/src/: contest.cpp  traffic_sign_detect.py  traffic_sign_detect_old.py
src/kvantbot_teleop/: CMakeLists.txt  package.xml
src/kvantbot_teleop/launch/: teleop.launch
src/kvantbot_teleop/src/: kvantbot_teleop.cpp  kvantbot_teleop.hpp
